unit tests updated and related code refactoring