@@ -36,6 +36,7 @@ import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Objects;
 import java.util.Optional;
 
@@ -65,6 +66,7 @@ import static uk.gov.hmcts.ethos.replacement.docmosis.constants.InitialConsidera
 import static uk.gov.hmcts.ethos.replacement.docmosis.constants.InitialConsiderationConstants.TELEPHONE;
 import static uk.gov.hmcts.ethos.replacement.docmosis.constants.InitialConsiderationConstants.UDL_HEARING;
 import static uk.gov.hmcts.ethos.replacement.docmosis.constants.InitialConsiderationConstants.VIDEO;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.Constants.NOT_AVAILABLE_FOR_VIDEO_HEARINGS;
 import static uk.gov.hmcts.ethos.replacement.docmosis.utils.InternalException.ERROR_MESSAGE;
 
 @ExtendWith(SpringExtension.class)
@@ -197,7 +199,8 @@ class InitialConsiderationServiceTest {
 
     @Test
     void getIcHearingPanelPreference_shouldReturnNull_whenRespondentCollectionIsNull() {
-        String hearingPanelPreferenceDetails = initialConsiderationService.getIcRespondentHearingPanelPreference(null);
+        String hearingPanelPreferenceDetails = initialConsiderationService.getIcRespondentHearingPanelPreference(
+                null);
         assertThat(hearingPanelPreferenceDetails).isNull();
     }
 
@@ -244,17 +247,102 @@ class InitialConsiderationServiceTest {
                         + String.format(RESPONDENT_HEARING_PANEL_PREFERENCE, "panel", "Fair trial"));
     }
 
+    @Test
+    void setRespondentDetails_shouldReturnFormattedDetails_whenRespondentCollectionIsValid() {
+        RespondentSumTypeItem respondent = new RespondentSumTypeItem();
+        respondent.setValue(new RespondentSumType());
+        respondent.getValue().setRespondentName("Test Corp");
+        respondent.getValue().setResponseRespondentName("Test Response");
+        respondent.getValue().setRespondentHearingPanelPreference("Judge");
+        respondent.getValue().setRespondentHearingPanelPreferenceReason("Fair trial");
+        respondent.getValue().setEt3ResponseHearingRespondent(List.of("Video"));
+
+        CaseData caseData = new CaseData();
+        caseData.setRespondentCollection(List.of(respondent));
+
+        String result = initialConsiderationService.setRespondentDetails(caseData);
+
+        assertThat(result).isEqualTo(
+                String.format(RESPONDENT_NAME, 1, "Test Corp", "Test Response")
+                        + String.format(RESPONDENT_HEARING_PANEL_PREFERENCE, "Judge", "Fair trial")
+        );
+    }
+
+    @Test
+    void setRespondentDetails_shouldIncludeNotAvailableForVideo_whenRespondentNotAvailableForVideo() {
+        RespondentSumTypeItem respondent = new RespondentSumTypeItem();
+        respondent.setValue(new RespondentSumType());
+        respondent.getValue().setRespondentName("Test Corp");
+        respondent.getValue().setResponseRespondentName("Test Response");
+        respondent.getValue().setRespondentHearingPanelPreference("Judge");
+        respondent.getValue().setRespondentHearingPanelPreferenceReason("Fair trial");
+        respondent.getValue().setEt3ResponseHearingRespondent(List.of("Telephone"));
+
+        CaseData caseData = new CaseData();
+        caseData.setRespondentCollection(List.of(respondent));
+
+        String result = initialConsiderationService.setRespondentDetails(caseData);
+
+        assertThat(result).isEqualTo(
+                String.format(RESPONDENT_NAME, 1, "Test Corp", "Test Response")
+                        + String.format(RESPONDENT_HEARING_PANEL_PREFERENCE, "Judge", "Fair trial")
+                        + NOT_AVAILABLE_FOR_VIDEO_HEARINGS.toUpperCase(Locale.UK)
+        );
+    }
+
+    @Test
+    void setRespondentDetails_shouldReturnEmptyString_whenRespondentCollectionIsEmpty() {
+        CaseData caseData = new CaseData();
+        caseData.setRespondentCollection(new ArrayList<>());
+
+        String result = initialConsiderationService.setRespondentDetails(caseData);
+
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void setRespondentDetails_shouldHandleNullRespondentCollection() {
+        CaseData caseData = new CaseData();
+        caseData.setRespondentCollection(null);
+
+        String result = initialConsiderationService.setRespondentDetails(caseData);
+
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void setRespondentDetails_shouldHandleNullValuesInRespondent() {
+        RespondentSumTypeItem respondent = new RespondentSumTypeItem();
+        respondent.setValue(new RespondentSumType());
+        respondent.getValue().setRespondentName(null);
+        respondent.getValue().setResponseRespondentName(null);
+        respondent.getValue().setRespondentHearingPanelPreference(null);
+        respondent.getValue().setRespondentHearingPanelPreferenceReason(null);
+        respondent.getValue().setEt3ResponseHearingRespondent(null);
+
+        CaseData caseData = new CaseData();
+        caseData.setRespondentCollection(List.of(respondent));
+
+        String result = initialConsiderationService.setRespondentDetails(caseData);
+
+        assertThat(result).isEqualTo(
+                String.format(RESPONDENT_NAME, 1, "", "")
+                        + String.format(RESPONDENT_HEARING_PANEL_PREFERENCE, "-", "-")
+                        + NOT_AVAILABLE_FOR_VIDEO_HEARINGS.toUpperCase(Locale.UK)
+        );
+    }
+
     private void setFutureHearingDate(CaseData caseData) {
-        DateListedType dateListed = caseData.getHearingCollection().get(0).getValue().getHearingDateCollection()
-            .get(0).getValue();
+        DateListedType dateListed = caseData.getHearingCollection().getFirst().getValue().getHearingDateCollection()
+            .getFirst().getValue();
         dateListed.setHearingStatus("Listed");
         dateListed.setListedDate(EARLIEST_FUTURE_HEARING_DATE.toString());
         dateListed.setHearingTimingDuration("3.5 Hours");
     }
 
     private void setFutureHearingDateWithSettledHearing(CaseData caseData) {
-        DateListedType dateListed = caseData.getHearingCollection().get(0).getValue().getHearingDateCollection()
-            .get(0).getValue();
+        DateListedType dateListed = caseData.getHearingCollection().getFirst().getValue().getHearingDateCollection()
+            .getFirst().getValue();
         dateListed.setHearingStatus("Settled");
         dateListed.setListedDate(EARLIEST_FUTURE_HEARING_DATE.toString());
         dateListed.setHearingTimingDuration("3.5 Hours");
@@ -399,8 +487,8 @@ class InitialConsiderationServiceTest {
     void generateDocument_Exceptions() throws IOException {
         when(tornadoService.generateEventDocument(any(CaseData.class), anyString(),
                 anyString(), anyString())).thenThrow(new InternalException(ERROR_MESSAGE));
-        assertThrows(Exception.class, () -> initialConsiderationService.generateDocument(new CaseData(), "userToken",
-                ENGLANDWALES_CASE_TYPE_ID));
+        assertThrows(Exception.class, () -> initialConsiderationService.generateDocument(new CaseData(),
+                "userToken", ENGLANDWALES_CASE_TYPE_ID));
     }
 
     @Test
